--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ A joint optimization framework for estimating shape, BRDF, camera pose, and illu
 			        </td>
 			      </tr> -->
 						
-          <tr onmouseout="mip360_stop()" onmouseover="mip360_start()"  bgcolor="#ffffd0">
+      <!--    <tr onmouseout="mip360_stop()" onmouseover="mip360_start()"  bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='mip360_image'><video  width=100% height=100% muted autoplay loop>
@@ -524,7 +524,7 @@ A joint optimization framework for estimating shape, BRDF, camera pose, and illu
               <p></p>
               <p>mip-NeRF can be extended to produce realistic results on unbounded scenes.</p>
             </td>
-          </tr> 
+          </tr> -->
 <!--
           <tr onmouseout="rawnerf_stop()" onmouseover="rawnerf_start()"  bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
